--- a/SantaSecreto.html
+++ b/SantaSecreto.html
@@ -6,7 +6,7 @@
     <title>Mi Página</title>
     <style>
         header {
-            background-image: url('Header.png');
+            background-image: url('assets/Header.png');
             background-size: cover;
             height: 300px; /* Altura del encabezado */
             width: 100%; /* Ancho completo */
@@ -18,6 +18,10 @@
         }
         header h1 {
             font-size: 3em;
+        }
+
+        body{
+            background-color: #EFF5FB;
         }
     </style>
 </head>
