--- a/SantaSecreto.html
+++ b/SantaSecreto.html
@@ -4,33 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Página</title>
-    <style>
-        header {
-            background-image: url('assets/Header.png');
-            background-size: cover;
-            height: 300px; /* Altura del encabezado */
-            width: 100%; /* Ancho completo */
-            text-align: center;
-            color: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        header h1 {
-            font-size: 3em;
-        }
-
-        body{
-            background-color: #EFF5FB;
-        }
-    </style>
+    <link href="https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<!----- Comentarios ---->
     <header>
-        <h1>Bienvenido a Mi Página</h1>
+       
+        <img src="assets/Mischief.png" alt="Mi Imagen" class="img">
+        
+        <h1>¡Feliz Navidad!</h1>
     </header>
-
-
 </body>
 </html>
