--- a/SantaSecreto.html
+++ b/SantaSecreto.html
@@ -21,7 +21,7 @@
     
     <header>
         <!-- Imagen con animación wobble -->
-        <img src="assets/Mischief.png" 
+        <img src="assets/pngMischief.PNG" 
              alt="Mi Imagen" 
              class="img">
         
