--- a/Diseño.html
+++ b/Diseño.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sweet Charm</title>
-  <link rel="stylesheet" href="Estilo.css">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Merry Xmas</title>
+<link href="https://fonts.googleapis.com/css2?family=Mountains+of+Christmas:wght@400;700&family=Pompiere&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&family=Pompiere&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="Estilo.css">
 </head>
 <body>
-  <header class="header">
-    <h1>SweetCharm</h1>
-    <p>The first Asian pastry shop in the Netherlands</p>
-    <button class="cta-button">Discover our sweets</button>
-  </header>
-
+    <div class="snowflake">❄</div>
+    <div class="snowflake">❄</div>
+    <div class="snowflake">❄</div>
+    <div class="snowflake">❄</div>
+    <div class="snowflake">❄</div>
+    <div class="snowflake">❄</div>
+    <div class="snowflake">❄</div>
+    <div class="snowflake">❄</div>
+    <div class="snowflake">❄</div>
+    
+    <header class="header">
+        <h1>¡Felices Fiestas!</h1>
+        <!-- Usa 'src' para la imagen -->
+        <img src="assets/Mischief 8.gif" alt="Mischief" width="35%" style="background-color: transparent;">
+        <!--<img src="assets/GifMischiefWeb.GIF">--->
+        <p>~ Mis opciones de intercambio ~</p>
+      </header>
   <main>
     <section class="featured-desserts">
       <h2>Featured Desserts of the Week</h2>
@@ -20,11 +34,10 @@
         <!-- Repeat this card for each dessert -->
         <div class="dessert-card">
           <div class="dessert-image">
-            <!-- Add your image here -->
+            <img src="https://acortar.link/K79UzT" alt="Mazapán" class="dessert-image">
           </div>
-          <h3>Mango Mochi</h3>
-          <p>A classic dessert made with mango purée and glutinous rice flour.</p>
-          <span class="price">$26.00</span>
+          <h3>Mazapán De la Rosa endulzado con splenda</h3>
+          <span class="price">(~$9.50-$12.50 MXN)</span>
         </div>
 
         <div class="dessert-card">
@@ -35,7 +48,23 @@
           <p>A fluffy matcha cake roll with a cream filling and fresh fruit topping.</p>
           <span class="price">$35.00</span>
         </div>
-
+        
+        <div class="dessert-card">
+            <div class="dessert-image">
+              <!-- Add your image here -->
+            </div>
+            <h3>Matcha Roll</h3>
+            <p>A fluffy matcha cake roll with a cream filling and fresh fruit topping.</p>
+            <span class="price">$35.00</span>
+          </div>
+          <div class="dessert-card">
+            <div class="dessert-image">
+              <!-- Add your image here -->
+            </div>
+            <h3>Matcha Roll</h3>
+            <p>A fluffy matcha cake roll with a cream filling and fresh fruit topping.</p>
+            <span class="price">$35.00</span>
+          </div>
         <!-- Add more dessert cards as needed -->
 
       </div>
