--- a/Diseño2.html
+++ b/Diseño2.html
@@ -21,17 +21,24 @@
 <header class="header">
 <h1>¡Felices Fiestas!</h1>
 <!-- Usa 'src' para la imagen -->
-<img src="assets/Mischief 8.gif" alt="Mischief con gorro navideño" width="35%" style="background-color: transparent;">
+<img src="assets/Mischief 8.gif" alt="Mischief con gorro navideño" width="35%" style="background-color: transparent; display: block; margin: 0 auto;">
 <p>~ 🎄🎁🎉 Felices Fiestas a todos 🎄🎁🎉 ~</p>
 </header>
 <main>
 <section class="featured-desserts">
 <h2>Mis opciones para el intercambio 🦊</h2>
+<!--<audio src="assets/Burrito Sabanero (Instrumental).mp3" controls loop onplay="this.volume = 0.2;">
+    <p>If you are reading this, it is because your browser does not support the audio element.</p>
+</audio>-->
+<audio id="myAudio" src="assets/Burrito Sabanero (Instrumental).mp3" controls loop onplay="this.volume = 0.2;">
+    <p>If you are reading this, it is because your browser does not support the audio element.</p>
+</audio>
+
 <div class="desserts-grid">
 <!-- Repeat this card for each dessert -->
 <div class="dessert-card">
 <div class="dessert-image">
-<img src="assets/MAZAPAN.jpg" alt="Matcha Roll" class="dessert-image">
+<img src="assets/MAZAPAN.jpg" alt="Mazapan" class="dessert-image">
 </div>
 <h3>Mazapan</h3>
 <p>Mazapán De la Rosa endulzado con splenda 21 g</p>
@@ -74,5 +81,10 @@
 <footer class="footer">
 <p>&copy; 2024 Sweet Charm. All Rights Reserved.</p>
 </footer>
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        document.getElementById('myAudio').play();
+    });
+</script>
 </body>
 </html>
