--- a/DiseñoFinalweb/index.html
+++ b/DiseñoFinalweb/index.html
@@ -5,12 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Intercambio Navideño</title>
   <link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Pompiere&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="Styles.css">
   <script src="libs/circletype.min.js"></script>
   <script src="libs/main.js"></script>
 </head>
 
 <body>
+  <!--<div class="snowflake">❄</div>
   <div class="snowflake">❄</div>
   <div class="snowflake">❄</div>
   <div class="snowflake">❄</div>
@@ -18,8 +19,7 @@
   <div class="snowflake">❄</div>
   <div class="snowflake">❄</div>
   <div class="snowflake">❄</div>
-  <div class="snowflake">❄</div>
-  <div class="snowflake">❄</div>
+  <div class="snowflake">❄</div>-->
   <nav class="navbar">
     <div class="nav-container">
       <img src="assets/bunny.png" alt="Logo Bunny" width="60px" class="nav-logo">
@@ -58,6 +58,6 @@
   <footer>
     <audio id="myAudio" src="assets/Burrito Sabanero (Instrumental).mp3" controls loop onplay="this.volume = 0.2;"></audio>
     <img class="tree" src="assets/arbol.gif" alt="Árbol de Navidad">
-  </footer>
+  </footer> 
 </body>
 </html>
