--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-  <!--<div class="snowflake">❄</div>
   <div class="snowflake">❄</div>
   <div class="snowflake">❄</div>
   <div class="snowflake">❄</div>
@@ -19,7 +18,8 @@
   <div class="snowflake">❄</div>
   <div class="snowflake">❄</div>
   <div class="snowflake">❄</div>
-  <div class="snowflake">❄</div>-->
+  <div class="snowflake">❄</div>
+  <div class="snowflake">❄</div>
   <nav class="navbar">
     <div class="nav-container">
       <img src="assets/bunny.png" alt="Logo Bunny" width="60px" class="nav-logo">
