--- a/index.html
+++ b/index.html
@@ -44,15 +44,66 @@
 
   <div class="grid-container">
     <!-- Tarjetas (imágenes) -->
-    <div class="card"><img src="assets/2 (1).jpg" class="inner-card" alt="Navidad"></div>
-    <div class="card"><img src="assets/2 (1).png" class="inner-card" alt="Navidad"></div>
-    <div class="card"><img src="assets/2 (2).jpg" class="inner-card" alt="Navidad"></div>
-    <div class="card"><img src="assets/2 (2).png" class="inner-card" alt="Navidad"></div>
-    <div class="card"><img src="assets/2 (3).PNG" class="inner-card" alt="Navidad"></div>
-    <div class="card"><img src="assets/3.JPG" class="inner-card" alt="Navidad"></div>
-    <div class="card"><img src="assets/a.jpg" class="inner-card" alt="Navidad"></div>
-    <div class="card"><img src="assets/b.jpg" class="inner-card" alt="Navidad"></div>
-    <div class="card"><img src="assets/v.jpg" class="inner-card" alt="Navidad"></div>  
+    <div class="card">
+      <img src="assets/chocolateHershey.webp" class="inner-card" alt="Navidad">
+      <p class="card-Text">Hersheys Sin Azúcar 17g</p>
+      <p class="card-SubText"> $20.00 ~ $22.00</p>
+    </div>
+    <div class="card">
+      <img src="assets/CarlosV.webp" class="inner-card" alt="Navidad">
+      <p class="card-Text">Carlos V Sin Azúcar 17g</p>
+      <p class="card-SubText"> $19.00 ~ $20.00</p>
+    </div>
+    <div class="card">
+      <img src="assets/YomiLala.webp" class="inner-card" alt="Navidad">
+      <p class="card-Text">Leche Lala Yomi 190ml</p>
+      <p class="card-SubText"> $9.00 ~ $11.00</p>
+    </div>
+    <div class="card">
+      <img src="assets/Mazapan.webp" class="inner-card" alt="Navidad">
+      <p class="card-Text">Mazapán endulzado con splenda</p>
+      <p class="card-SubText"> $9.50 ~ $12.50</p>
+    </div>
+    <div class="card">
+      <img src="assets/Ferrero.png" class="inner-card" alt="Navidad">
+      <p class="card-Text">Ferrero Rocher Pack Con 3 pzs </p>
+      <p class="card-SubText"> $35.00 ~ $40.50</p>
+    </div>
+    <div class="card">
+      <img src="assets/m&ms.webp" class="inner-card" alt="Navidad">
+      <p class="card-Text">Chocolate M&M's 43.8g </p>
+      <p class="card-SubText"> $24.00 ~ $30.00</p>
+    </div>
+    <div class="card">
+      <img src="assets/m&ms.webp" class="inner-card" alt="Navidad">
+      <p class="card-Text">Mini paleta payaso 4pzs</p>
+      <p class="card-SubText"> $45.00 ~ $50.00</p>
+    </div>
+    <div class="card">
+      <img src="assets/kinder.webp" class="inner-card" alt="Navidad">
+      <p class="card-Text">Chocolate Kinder 4pzs</p>
+      <p class="card-SubText"> $25.00 ~ $34.00</p>
+    </div>
+    <div class="card">
+      <img src="assets/winis.webp" class="inner-card" alt="Navidad">
+      <p class="card-Text">Winis 12 pzs</p>
+      <p class="card-SubText"> $31.00 ~ $38.00</p>
+    </div>
+    <div class="card">
+      <img src="assets/palomitas.webp" class="inner-card" alt="Navidad">
+      <p class="card-Text">Palomitas Slim pop</p>
+      <p class="card-SubText"> $12.00 ~ $20.00</p>
+    </div>
+    <div class="card">
+      <img src="assets/okko.webp" class="inner-card" alt="Navidad">
+      <p class="card-Text">galleta okko chocolate</p>
+      <p class="card-SubText"> $12.00 ~ $25.00</p>
+    </div>
+    <div class="card">
+      <img src="assets/pringles.webp" class="inner-card" alt="Navidad">
+      <p class="card-Text">Pringles crema y cebolla 40 g</p>
+      <p class="card-SubText"> $23.00 ~ $25.00</p>
+    </div>
   </div>
 
   <footer>
