--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <div class="nav-container">
       <img src="assets/bunny.png" alt="Logo Bunny" width="60px" class="nav-logo">
       <p class="nav-title">Mischief ~</p>
+      <audio id="myAudio" src="assets/Burrito Sabanero (Instrumental).mp3" autoplay loop onplay="this.volume = 0.1;"></audio>
     </div>
   </nav>
 
@@ -107,8 +108,10 @@
   </div>
 
   <footer>
-    <audio id="myAudio" src="assets/Burrito Sabanero (Instrumental).mp3" controls loop onplay="this.volume = 0.2;"></audio>
-    <img class="tree" src="assets/arbol.gif" alt="Árbol de Navidad">
+    <h1 id="curved-text">Ho  Ho   Ho   Ho!</h1>    
+    <!--<audio id="myAudio" src="assets/Burrito Sabanero (Instrumental).mp3" controls loop onplay="this.volume = 0.2;"></audio>-->
+    <img class="bunny" src="assets/arbol.gif" alt="Árbol de Navidad" width="150px">
+    <img class="animate" src="assets/bunny.png" alt="Conejo" width="157px">
   </footer> 
 </body>
 </html>
