--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
   <div class="snowflake">❄</div>
   <div class="snowflake">❄</div>
   <div class="snowflake">❄</div>
+
   <nav class="navbar">
     <div class="nav-container">
       <img src="assets/bunny.png" alt="Logo Bunny" width="60px" class="nav-logo">
       <p class="nav-title">Mischief ~</p>
-      <audio id="myAudio" src="assets/Burrito Sabanero (Instrumental).mp3" autoplay loop onplay="this.volume = 0.1;"></audio>
+      <audio id="myAudio" src="assets/Burrito Sabanero (Instrumental).mp3" autoplay loop onplay="this.volume = 1;"></audio>
     </div>
   </nav>
 
@@ -106,12 +107,12 @@
       <p class="card-SubText"> $23.00 ~ $25.00</p>
     </div>
   </div>
-
+  <div class="header-container">
+    <h1 id="footer"> &#127775 ¡Ho  Ho   Ho   Ho!  &#127775</h1>    
+  </div>
   <footer>
-    <h1 id="curved-text">Ho  Ho   Ho   Ho!</h1>    
-    <!--<audio id="myAudio" src="assets/Burrito Sabanero (Instrumental).mp3" controls loop onplay="this.volume = 0.2;"></audio>-->
-    <img class="bunny" src="assets/arbol.gif" alt="Árbol de Navidad" width="150px">
-    <img class="animate" src="assets/bunny.png" alt="Conejo" width="157px">
+    <img class="bunny" src="assets/arbol.gif" alt="Árbol de Navidad" width="180px">
+    <img class="animate" src="assets/bunny.png" alt="Conejo" width="180px">
   </footer> 
 </body>
 </html>
