Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <p class="card-SubText"> $24.00 ~ $30.00</p>
     </div>
     <div class="card">
-      <img src="assets/m&ms.webp" class="inner-card" alt="Navidad">
+      <img src="assets/payaso.webp" class="inner-card" alt="Navidad">
       <p class="card-Text">Mini paleta payaso 4pzs</p>
       <p class="card-SubText"> $45.00 ~ $50.00</p>
     </div>
